= {project-name} Changelog
:project-name: Asciidoctor PDF
:url-repo: https://github.com/asciidoctor/asciidoctor-pdf

This document provides a high-level view of the changes to the {project-name} by release.
For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.

== 2.0.5 (2022-05-26) - @mojavelinux

Bug Fixes::

* do not filter TOC entries without an ID when computing the TOC extent (#2210)
* fix width of multi-word phrase with background and border offset (#2059)

=== Details

{url-repo}/releases/tag/v2.0.5[git tag] | {url-repo}/compare/v2.0.4\...v2.0.5[full diff]

== 2.0.4 (2022-05-25) - @mojavelinux

Bug Fixes::

* fix calculation of TOC extent when TOC entry has children but no ID (#2208)

=== Details

{url-repo}/releases/tag/v2.0.4[git tag] | {url-repo}/compare/v2.0.3\...v2.0.4[full diff]

== 2.0.3 (2022-05-25) - @mojavelinux

Improvements::

* compute the optimize settings in init_pdf and store as Hash instead of after writing the PDF file

Bug Fixes::

* adjust TrimBox to fit inside of BleedBox when using optimizer and compliance is PDF/X (#2203)
* set height of resized image to available height to avoid float precision error when scaling down image to fit page (#2205)
* prevent content on title page from overrunning the bounds of a single page and warn; restriction applies to `ink_title_page`

=== Details

{url-repo}/releases/tag/v2.0.3[git tag] | {url-repo}/compare/v2.0.2\...v2.0.3[full diff]

== 2.0.2 (2022-05-22) - @mojavelinux

Bug Fixes::

* use specified column widths to avoid bugs in column width calculation when using colspans (#1368)
* advance table to next page if rowspan in first row does not fit in space remaining on current page (#403)

=== Details

{url-repo}/releases/tag/v2.0.2[git tag] | {url-repo}/compare/v2.0.1\...v2.0.2[full diff]

== 2.0.1 (2022-05-21) - @mojavelinux

Bug Fixes::
