@@ -5,6 +5,12 @@
 This document provides a high-level view of the changes to the {project-name} by release.
 For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.
 
+== Unreleased
+
+Bug Fixes::
+
+* don't crash if inline role defines border width but not border color
+
 == 2.0.5 (2022-05-26) - @mojavelinux
 
 Bug Fixes::
